--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - proxy
 
   portainer:
-    image: portainer/portainer
+    image: portainer/portainer-ce
     ports:
       - "8000:8000"
       - "9000:9000"
